--- a/mobile-app-ws/pom.xml
+++ b/mobile-app-ws/pom.xml
@@ -12,10 +12,9 @@
 	<description>Demo project for EZPaaS Spring Boot</description>
 
 	<parent>
-		<groupId>com.fmr.ezpaas.frameworks</groupId>
-		<artifactId>ezpaas-fsf-boot-starter-parent</artifactId>
-		<version>5.0.0.12</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.2.RELEASE</version>
 	</parent>
 
 	<properties>
