--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Datasource
 
-spring.datasource.username=Ryan
+spring.datasource.username=ryan
 spring.datasource.password=Saints08!
-spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
+spring.datasource.url=jdbc:mysql://localhost:3306/fantasy_app
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 
